Changelog for Babel.

Babel 3.0.0-dev
=====================================
- [#107] Replace contextKey with cultureKey on drop down selection
- [#114] Fixed context on linking
- [#115] BabelLinks: Add &language Parameter
- [#110] Updated dutch lexicon

Babel 3.0.0-beta4 (March 25, 2015)
=====================================
- [#105] add &ignoreSiteStatus option to ignore site_status (when the site is offline)
- [#108] fix context's link then there's no translation on &includeUnlinked=`1` option
- [#106] fix resource selection when selecting empty text (&nbsp;)

Babel 3.0.0-beta3 (February 14, 2015)
=====================================
- [#101] fix BabelTranslation
- [#100] add optional typeahead combo of pagetitle on searching new link
- [#99] Polish translation

Babel 3.0.0-beta2 (December 2, 2014)
====================================
- remove "q" and "cultureKey" url parameters on BabelLinks
- add optional &toArray property to BabelLinks snippet
- add optional &toPlaceholder property to BabelLinks snippet
- add optional &wrapperTpl property to BabelLinks snippet
- add icons
- [#97] Add ru lexicon
- [#73] Add AjaxManager support

Babel 3.0.0-beta1 (November 28, 2014)
=====================================
- [#77] Update readme.txt
- [#51] Append URL parameters of current page if any
- add &includeUnlinked property to BabelLinks, option to skip/include unlinked context
- [#56] Emptying the MODX trash can corrupt values in modx_site_tmplvar_contentvalues
- [#88] Skip unpublished contexts
- [#82] Check for resourceId parameter before defaulting.
- [#78][#62] added outputSeparator for BabelLinks
- [#75] Replaced deprecated method clearCache() with refresh()
- [#84] optimize OnResourceDuplicate
- [#44][#29] Using cultureKey instead of contextKey on BabelTranslation snippet
- [#70] fix is_folder to isfolder
- [#27][#90][#92] Refactor language selection, runs using AJAX
- [#83][#59] extend babel plugin OnResourceDuplicate for nested resources
- [#67] italian translation